...
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_name"
                app:layout_constraintTop_toBottomOf="@id/airportIv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

...
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_city"
                app:layout_constraintTop_toBottomOf="@id/nameTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

...
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_icao_code"
                app:layout_constraintTop_toBottomOf="@id/cityTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/icaoCodeTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="4" />
...
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_towerFrequency"
                app:layout_constraintTop_toBottomOf="@id/icaoCodeTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/towerFrequencyTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="7" />
...
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/airport_groundFrequency"
                app:layout_constraintTop_toBottomOf="@id/towerFrequencyTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/groundFrequencyTie"
                    style="@style/OutlinedTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="7" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButton"
                style="@style/BlackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/airport_save"
                app:layout_constraintBottom_toBottomOf="parent"
...
