<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <pl.kossa.myflights.views.appbars.SaveAppBar
        android:id="@+id/saveAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/runwayIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_runway"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/runway_name"
                app:layout_constraintTop_toBottomOf="@id/runwayIv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lengthTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/runway_length"
                app:layout_constraintTop_toBottomOf="@id/nameTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lengthTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/headingTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/runway_heading"
                app:layout_constraintTop_toBottomOf="@id/lengthTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/headingTie"
                    style="@style/OutlinedTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilsFrequencyTil"
                style="@style/OutlinedTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/runway_ils_frequency"
                app:layout_constraintTop_toBottomOf="@id/headingTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ilsFrequencyTie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                style="@style/BlackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save_runway"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ilsFrequencyTil" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>