<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.kossa.myflights.views.appbars.BackAppBar
        android:id="@+id/backAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/runway" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/runwaySwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/runwayIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="64dp"
                    android:src="@drawable/ic_runway"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/nameEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/runwayIv"
                    app:tagText="@string/runway_name" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/lengthEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/nameEwt"
                    app:tagText="@string/runway_length" />


                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/headingEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/lengthEwt"
                    app:tagText="@string/runway_heading" />


                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/ilsFrequencyEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/headingEwt"
                    app:tagText="@string/runway_ils_frequency" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editButton"
                    style="@style/BlackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ilsFrequencyEwt" />
                <!--TODO approaches-->
                <!--TODO image-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>